# terminal_render

./: .gitignore  Cargo.toml  README.md
src/: canvas.rs  config.rs  frame.rs  main.rs  pixel.rs  term.rs
src/ascii/: mod.rs  render.rs
src/processing/: filter.rs  mod.rs
src/termrender/: mod.rs
