[package]
name = "gm_ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# image = "0.25.1"
# windows = "0.58.0"
windows-capture = "1.2.0"
# windows-sys = "0.52.0"
winapi = {version = "0.3", features = ["winuser", "winnls", "wincon", "winbase"]}
# libc = "0.2.155"
# termcolor = "1.4.1"
# term_size = "0.3.2"
 crossterm = "0.27.0"
# tui = "0.19.0"
# fontdue = "0.9.2"
# glyphon = "0.5.0"
# wgpu = "0.19"
# winit = { version = "0.29.10", features = ["rwh_05"] }
# env_logger = "0.11.3"
# pollster = "0.3.0"
# cosmic-text = "0.1.0"
# etagere = "0.2.10"
# lru = "0.12.1"
rand = "0.8.5"
kernel32-sys = "0.2.2"
terminal_size = "0.3.0"
rayon = "1.10.0"
criterion = "0.5.1"
# termion = "4.0.2"
# termsize = "0.1.9"


[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]

[profile.dev]
debuginfo-level = 1 